# protobuf-kos

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  KasperskyOS-CE-adaptation.patch  LICENSE  README.md  THIRD-PARTY-NOTICES.txt
.github/: CODEOWNERS  issue_template.md
cmake/: CMakeLists.txt  tests.cmake
cmake/kos/: test_fstab  tests.cmake
examples/kos/: CMakeLists.txt  README.md
examples/kos/common/: ipc.h  print.h
examples/kos/consumer/: CMakeLists.txt
examples/kos/consumer/src/: main.cpp
examples/kos/einit/: CMakeLists.txt
examples/kos/einit/src/: init.yaml.in  security.psl.in
examples/kos/producer/: CMakeLists.txt
examples/kos/producer/src/: main.cpp
examples/kos/resources/edl/: Consumer.edl  Producer.edl
examples/kos/resources/hdd/: address_book.json
examples/kos/resources/idl/: IConsumer.idl
kos/: build-example.sh  build-tests.sh  cross-build.sh  host-build.sh
src/google/protobuf/: map.h
src/google/protobuf/compiler/: subprocess.cc
src/google/protobuf/io/: coded_stream.h  zero_copy_stream_unittest.cc
src/google/protobuf/stubs/: mutex.h  port.h
